Closed Bug 1162310 Opened 9 years ago Closed 9 years ago

Fix static assertions when compiling with sixgill

Categories

(Core :: General, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla40
Tracking Status
firefox40 --- fixed

People

(Reporter: sfink, Assigned: sfink)

References

Details

Attachments

(1 file)

Bug 1156030 removed some unused static assertions, but in the process broke the build when XGILL_PLUGIN is defined. (See also bug 1162263.)
I don't know enough about these to repair them for their original use, but afaik nobody is attempting to use sixgill in the way these were intended for anyway.
Attachment #8602398 - Flags: review?(bhackett1024)
Attachment #8602398 - Flags: review?(bhackett1024) → review+
https://hg.mozilla.org/mozilla-central/rev/c8ba42a1ce6a
Status: ASSIGNED → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla40
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: