Bug 1162310 - Do not use nonexistent macro when XGILL_PLUGIN is defined, r=bhackett